<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dastak Mobile</string>
    <string name="developed_by">Developed by Aaryan7</string>
    <string name="add_product">Add Product</string>
    <string name="my_products">My Products</string>
    <string name="create_bill">Create Bill</string>
    <string name="sales_analysis">Sales Analysis</string>
    <string name="profit_analysis">Profit Analysis</string>
    <string name="product_name">Product Name</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="profit">Profit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_products">Select Products</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="generate_bill">Generate Bill</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_to_bill">Add to Bill</string>
</resources>
